[package]
name = "ava_dung_parser"
version = "0.1.0"
authors = ["FRIZFOREVER <kirillhromov@mail.ru>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
hex = "0.4"
struct_iterable = "0.1.1"

[build-dependencies]
slint-build = "1.6"
